--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -252,299 +252,26 @@ body main section:first-child>div:nth-child(8)>img{
     width: 2vw;
 }
 
-
-
-/*--------------------------------------features section-------------------------------------------------*/
-
+/*--------------------------------------About me section-------------------------------------------------*/
 section:nth-child(2){
     position: relative;
     height: 100vh;
-    width: 60vw;
+    width: 71vw;
     padding-left: 14vw;
     padding-right: 14vw;
 }
 
+#section4MyImage2{
+    width: 26.5%;
 
-section:nth-child(2)>div:nth-child(1)>div:nth-child(1){
-    width: 27vh;
-    height: 36vh;
-    background:linear-gradient(to top, rgba(0, 153, 201, 0.8), #D6F0F5);
-    box-shadow: #D0D0D0 0px 4px 12px;
-    border-radius: 1vh;
-    position: absolute;
-    margin: auto;
-}
-
-section:nth-child(2)>div:nth-child(1)>div:nth-child(1):hover{
-    box-shadow: #00ccff 0px 4px 12px;
-}
-
-section:nth-child(2)>div:nth-child(1)>div:nth-child(1){
-    height: 35vh;
-    width: 25vh;
-    position: absolute;
-    top: -26vh;
-    margin: auto;
-}
-
-section:nth-child(2)>div:nth-child(1)>div:nth-child(1)>h1{
-    width: 20vh;
-    font-family: 'Catamaran';
-    font-size: 1vw;
-    font-weight: 600;
-    color: #0A0A0A;
-    position: absolute;
-    top: 17vh;
-    left: 5vh;
-    margin: auto;
-}
-
-section:nth-child(2)>div:nth-child(1)>div:nth-child(1)>h2{
-    width: 8vw;
-    font-family: Inter, SansSerif;
-    font-size: 0.9vw;
-    font-weight: 300;
-    color: #0A0A0A;
-    text-align: center;
-    position: absolute;
-    top: 21vh;
-    left: 4vh;
-    margin: auto;
-}
-
-section:nth-child(2)>div:nth-child(1)>div:nth-child(1)>img{
-    width: 30%;
-    position: absolute;
-    top: 6vh;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-
-section:nth-child(2)>div:nth-child(1)>div:nth-child(2){
-    width: 27vh;
-    height: 36vh;
-    background:linear-gradient(to top, rgba(0, 153, 201, 0.8), #D6F0F5);
-    box-shadow: #D0D0D0 0px 4px 12px;
-    border-radius: 1vh;
-    position: absolute;
-    margin: auto;
-}
-
-section:nth-child(2)>div:nth-child(1)>div:nth-child(2):hover{
-    box-shadow: #00ccff 0px 4px 12px;
-}
-
-section:nth-child(2)>div:nth-child(1)>div:nth-child(2){
-    height: 35vh;
-    width: 25vh;
-    position: absolute;
-    top: -18vh;
-    left: 33vw;
-    margin: auto;
-}
-
-section:nth-child(2)>div:nth-child(1)>div:nth-child(2)>h1{
-    width: 20vh;
-    font-family: 'Catamaran';
-    font-size: 1vw;
-    font-weight: 600;
-    color: #0A0A0A;
-    position: absolute;
-    top: 17vh;
-    left: 6vh;
-    margin: auto;
-}
-
-section:nth-child(2)>div:nth-child(1)>div:nth-child(2)>h2{
-    width: 8vw;
-    font-family: Inter, SansSerif;
-    font-size: 0.9vw;
-    font-weight: 300;
-    color: #0A0A0A;
-    text-align: center;
-    position: absolute;
-    top: 21vh;
-    left: 4vh;
-    margin: auto;
-}
-
-section:nth-child(2)>div:nth-child(1)>div:nth-child(2)>img{
-    width: 30%;
-    position: absolute;
-    top: 6vh;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-
-section:nth-child(2)>div:nth-child(1)>div:nth-child(3){
-    width: 27vh;
-    height: 36vh;
-    background:linear-gradient(to top, rgba(0, 153, 201, 0.8), #D6F0F5);
-    box-shadow: #D0D0D0 0px 4px 12px;
-    border-radius: 1vh;
-    position: absolute;
-    margin: auto;
-}
-
-section:nth-child(2)>div:nth-child(1)>div:nth-child(3):hover{
-    box-shadow: #00ccff 0px 4px 12px;
-}
-
-section:nth-child(2)>div:nth-child(1)>div:nth-child(3){
-    height: 35vh;
-    width: 25vh;
-    position: absolute;
-    top: 25vh;
-    left: 37vw;
-    margin: auto;
-}
-
-section:nth-child(2)>div:nth-child(1)>div:nth-child(3)>h1{
-    width: 23vh;
-    font-family: 'Catamaran';
-    font-size: 1vw;
-    font-weight: 600;
-    color: #0A0A0A;
     position: absolute;
     top: 15vh;
-    left: 4vh;
     margin: auto;
 }
 
-section:nth-child(2)>div:nth-child(1)>div:nth-child(3)>h2{
-    width: 8vw;
-    font-family: Inter, SansSerif;
-    font-size: 0.9vw;
-    font-weight: 300;
-    color: #0A0A0A;
-    text-align: center;
-    position: absolute;
-    top: 23vh;
-    left: 4vh;
-    margin: auto;
-}
 
-section:nth-child(2)>div:nth-child(1)>div:nth-child(3)>img{
-    width: 30%;
-    position: absolute;
-    top: 6vh;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
 
-section:nth-child(2)>div:nth-child(1)>div:nth-child(4){
-    width: 27vh;
-    height: 36vh;
-    background:linear-gradient(to top, rgba(0, 153, 201, 0.8), #D6F0F5);
-    box-shadow: #D0D0D0 0px 4px 12px;
-    border-radius: 1vh;
-    position: absolute;
-    margin: auto;
-}
 
-section:nth-child(2)>div:nth-child(1)>div:nth-child(4):hover{
-    box-shadow: #00ccff 0px 4px 12px;
-}
-
-section:nth-child(2)>div:nth-child(1)>div:nth-child(4){
-    height: 35vh;
-    width: 25vh;
-    position: absolute;
-    top: 18vh;
-    left: 18vw;
-    margin: auto;
-}
-
-section:nth-child(2)>div:nth-child(1)>div:nth-child(4)>h1{
-    width: 23vh;
-    font-family: 'Catamaran';
-    font-size: 1vw;
-    font-weight: 600;
-    color: #0A0A0A;
-    position: absolute;
-    top: 17vh;
-    left: 3vh;
-    margin: auto;
-}
-
-section:nth-child(2)>div:nth-child(1)>div:nth-child(4)>h2{
-    width: 8vw;
-    font-family: Inter, SansSerif;
-    font-size: 0.9vw;
-    font-weight: 300;
-    color: #0A0A0A;
-    text-align: center;
-    position: absolute;
-    top: 21vh;
-    left: 3vh;
-    margin: auto;
-}
-
-section:nth-child(2)>div:nth-child(1)>div:nth-child(4)>img{
-    width: 30%;
-    position: absolute;
-    top: 6vh;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-
-section:nth-child(2)>div:nth-child(2)>h5 {
-    width: 0vw;
-    font-family: Inter,"Arial Black";
-    font-size: 2vw;
-    font-weight: 600;
-    position: absolute;
-    right: 27.8vw;
-    top: 11vh;
-    color: #D9D9D9;
-    margin: auto;
-}
-
-section:nth-child(2)>div:nth-child(2)>h1 {
-    width: 21vw;
-    font-family: 'Catamaran';
-    font-size: 3vw;
-    font-weight: 700;
-    color: #0A0A0A;
-    position: absolute;
-    right: 15vh;
-    top: 15vh;
-    margin: auto;
-}
-
-section:nth-child(2)>div:nth-child(2)>h2 {
-    width: 20vw;
-    font-family: Inter, "Arial Black";
-    font-size: 1vw;
-    font-weight: 600;
-    color: #808080;
-    position: absolute;
-    top: 30vh;
-    right: 17vh;
-    margin: auto;
-}
-
-section:nth-child(2)>div:nth-child(3)>div:nth-child(1){
-    position: absolute;
-    top: 23vw;
-    right: 40.3vw;
-    border-bottom-right-radius: 6%;
-    width: 3vw;
-    margin: auto;
-}
-
-section:nth-child(2)>div:nth-child(3)>div:nth-child(2){
-    position: absolute;
-    top: 9vw;
-    left: 10vw;
-    border-bottom-right-radius: 6%;
-    width: 3vw;
-    margin: auto;
-}
 
 /*--------------------------------------About me section-------------------------------------------------*/
 section:nth-child(3){
