--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -328,419 +328,10 @@ section:nth-child(2)>div>img:nth-child(2){
     left: 16vw;
 }
 
-
-/*--------------------------------------education section-------------------------------------------------*/
-
-section:nth-child(4){
-    position: relative;
-    height: 150vh;
-    width: 65vw;
-    padding-left: 0vw;
-    padding-right: 14vw;
-}
-
-section:nth-child(4)>div:nth-child(1)>img{
-    position: absolute;
-    bottom: -14vh;
-    width: 98.75vw;
-    height: 195vh;
-    z-index: 1;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(1)>h1{
-    width: 68vh;
-    position: absolute;
-    font-family: Inter, "Arial Black";
-    font-weight: 600;
-    font-size: 2vw;
-    color: #ffffff;
-    bottom: 139vh;
-    left: 93vh;
-    margin: auto;
-    z-index: 1;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(1)>h2{
-    width: 63vh;
-    position: absolute;
-    font-family: 'Catamaran';
-    font-weight: 600;
-    font-size: 3vw;
-    color: #000000;
-    bottom: 134vh;
-    left: 90vh;
-    margin: auto;
-    z-index: 1;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(2){
-    position: absolute;
-    padding-left: 14vw;
-    padding-right: 14vw;
-    top: 45vh;
-    z-index: 1;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>hr{
-    position: absolute;
-    box-sizing: content-box;
-    height: 6px;
-    width: 130vh;
-    left: 45vh;
-    bottom: 24.1vh;
-    background-color: #00B4D8;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>div>img:nth-child(1){
-    position: absolute;
-    height: 4vh;
-    left: 174.8vh;
-    bottom: 24vh;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>div>img:nth-child(2){
-    position: absolute;
-    bottom: 11.99vh;
-    left: 38vh;
-    width: 8vh;
-}
-
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>h5{
-    position: absolute;
-    width: 16vh;
-    font-family: system-ui;
-    font-size: 3vh;
-    left: 48vh;
-    /* top: -24.5vh; */
-    bottom: 13vh;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>img{
-    position: absolute;
-    left: 64vh;
-    bottom: 7vh;
-    height: 12vh;
-    width: 12vh;
-    bottom: 14vh;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>h1{
-    width: 50vh;
-    font-size: 3vh;
-    font-family: system-ui;
-    position: absolute;
-    bottom: 18vh;
-    left: 122vh;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(2)>h2{
-    width: 50vh;
-    font-size: 2vh;
-    font-family: system-ui,cursive;
-    position: absolute;
-    bottom: 15vh;
-    left: 133vh;
-}
-
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(3){
-    position: absolute;
-    padding-left: 14vw;
-    padding-right: 14vw;
-    top: 75.7vh;
-    z-index: 1;
-}
-section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>hr{
-    position: absolute;
-    box-sizing: content-box;
-    height: 6px;
-    width: 125vh;
-    left: 45.49vh;
-    bottom: 41.2vh;
-    background-color: #00B4D8;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>div>img{
-    position: absolute;
-    width: 8vh;
-    left: 170vh;
-    bottom: 29.5vh;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>h5{
-    width: 16vh;
-    position: absolute;
-    font-family: system-ui;
-    font-size: 3vh;
-    left: 155vh;
-    bottom: 29.9vh;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>img{
-    position: absolute;
-    left: 141vh;
-    bottom: 7vh;
-    height: 12vh;
-    width: 12vh;
-    bottom: 30vh;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>h1{
-    width: 50vh;
-    font-size: 3vh;
-    font-family: system-ui;
-    position: absolute;
-    bottom: 35vh;
-    left: 48vh;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(3)>h2{
-    width: 50vh;
-    font-size: 2vh;
-    font-family: system-ui,cursive;
-    position: absolute;
-    bottom: 32vh;
-    left: 58vh;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(4){
-    position: absolute;
-    padding-left: 14vw;
-    padding-right: 14vw;
-    top: 129.1vh;
-    z-index: 1;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(4)>hr{
-    position: absolute;
-    box-sizing: content-box;
-    height: 6px;
-    width: 125vh;
-    left: 45.3vh;
-    bottom: 81.4vh;
-    background-color: #00B4D8;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(4)>div>img{
-    position: absolute;
-    width: 8vh;
-    left: 37.5vh;
-    bottom: 69.2vh;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(4)>h5{
-    position: absolute;
-    width: 16vh;
-    font-family: system-ui;
-    font-size: 3vh;
-    left: 48vh;
-    bottom: 69.9vh;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(4)>img{
-    position: absolute;
-    left: 64vh;
-    bottom: 7vh;
-    height: 12vh;
-    width: 12vh;
-    bottom: 70.5vh;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(4)>h1{
-    width: 61vh;
-    font-size: 3vh;
-    font-family: system-ui;
-    position: absolute;
-    bottom: 75vh;
-    left: 110vh;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(4)>h2{
-    width: 50vh;
-    font-size: 2vh;
-    font-family: system-ui,cursive;
-    position: absolute;
-    bottom: 72vh;
-    left: 123vh;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(5){
-    position: absolute;
-    padding-left: 14vw;
-    padding-right: 14vw;
-    top: 182vh;
-    z-index: 1;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>hr{
-    position: absolute;
-    box-sizing: content-box;
-    height: 6px;
-    width: 125vh;
-    left: 45vh;
-    bottom: 120.65vh;
-    background-color: #00B4D8;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>div>img{
-    position: absolute;
-    width: 8vh;
-    left: 169.5vh;
-    bottom: 108.8vh;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>h5{
-    width: 17vh;
-    position: absolute;
-    font-family: system-ui;
-    font-size: 3vh;
-    left: 155vh;
-    bottom: 108.9vh;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>img{
-    position: absolute;
-    left: 141vh;
-    bottom: 7vh;
-    height: 12vh;
-    width: 12vh;
-    bottom: 109.5vh;
-
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>h1{
-    width: 61vh;
-    font-size: 3vh;
-    font-family: system-ui;
-    position: absolute;
-    bottom: 115vh;
-    left: 47vh;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(5)>h2{
-    width: 50vh;
-    font-size: 2vh;
-    font-family: system-ui,cursive;
-    position: absolute;
-    bottom: 112vh;
-    left: 50vh;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(6){
-    position: absolute;
-    padding-left: 14vw;
-    padding-right: 14vw;
-    bottom: 301vh;
-    z-index: 1;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(6)>hr{
-    position: absolute;
-    box-sizing: content-box;
-    height: 6px;
-    width: 125vh;
-    left: 45vh;
-    top: 221.7vh;
-    background-color: #00B4D8;
-}
-
-section:nth-child(4)>div:nth-child(2)>div:nth-child(6)>div>img{
-    position: absolute;
-    height: 4vh;
-    left: 41.8vh;
-    top: 221.5vh;
-}
-
-section:nth-child(5)>h5{
-    width: 68vh;
-    position: relative;
-    font-family: Inter, "Arial Black";
-    font-weight: 600;
-    font-size: 2vw;
-    color: #ffffff;
-    bottom: 54vh;
-    left: 21vh;
-    margin: auto;
-    z-index: 1;
-}
-
-section:nth-child(5)>h1{
-    width: 63vh;
-    position: relative;
-    font-family: 'Catamaran';
-    font-weight: 600;
-    font-size: 3vw;
-    color: #000000;
-    bottom: 56vh;
-    left: 12vh;
-    margin: auto;
-    z-index: 1;
-
-}
-
-section:nth-child(5)>img{
-    width: 5%;
-    position: absolute;
-    top: 452vh;
-    margin: auto;
-    z-index: 1;
-}
-
-section:nth-child(5)>img:hover{
-    width: 6%;
-}
-
-#javaLogo{
-    right: 0;
-    left: 0;
-}
-
-#sqlLogo{
-    right: 0vw;
-    left: 15vw;
-}
-
-#jsLogo{
-    border-radius: 15%;
-    right: 15vw;
-    left: 0vw;
-}
-
-#cssLogo{
-    right: 0vw;
-    left: 30vw;
-}
-
-#htmlLogo{
-    right: 30vw;
-    left: 0vw;
-}
-
-#figmaLogo{
-    right: 0vw;
-    left: 45vw;
-}
-
-#wordpressLogo{
-    right: 45vw;
-    left: 0vw;
-}
-
-#arduinoLogo{
-    right: 0vw;
-    left: 60vw;
-}
-
-#hibernateLogo{
-    right: 60vw;
-    left: 0vw;
-}
-
 /*--------------------------------------expertise section-------------------------------------------------*/
 
 
-section:nth-child(6){
+section:nth-child(3){
     position: relative;
     height: 110vh;
     width: 70vw;
@@ -748,399 +339,20 @@ section:nth-child(6){
     padding-right: 14vw;
 }
 
-section:nth-child(6)>h5{
+section:nth-child(3)>h5{
     width: 15vw;
-    font-family: Inter,"Arial Black";
+    font-family: 'Signika';
     font-size: 2vw;
     font-weight: 600;
-    color: #D9D9D9;
-
+    color: #FAC921;
     position: absolute;
-    top: 0vh;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-
-section:nth-child(6)>h1{
-    width: 42vw;
-    font-family: 'Catamaran';
-    font-size: 3vw;
-    font-weight: 700;
-    color: #0A0A0A;
-
-    position: absolute;
-    top: 2vh;
-    right: 0;
-    left: 0;
-    margin: auto;
-}
-
-section:nth-child(6)>p{
-    width: 62vw;
-    font-family: Inter, cursive;
-    font-size: 1.3vw;
-    font-weight: 700;
-    color: #0A0A0A;
-    position: absolute;
-    top: 8vh;
-    right: 0;
-    left: 16vh;
-    margin: auto;
-}
-
-
-
-section:nth-child(6)>div{
-    width: 23.5vw;
-    height: 35vh;
-    background-color: white;
-    box-shadow: #D0D0D0 0px 4px 12px;
-    border-radius: 1vh;
-
-    position: absolute;
-    margin: auto;
-}
-
-section:nth-child(6)>div:hover{
-    box-shadow: #959393 0px 4px 12px;
-}
-
-
-
-section:nth-child(6)>div>h4{
-    font-family: 'Catamaran';
-    font-size: 1.5vw;
-    font-weight: 700;
-    color: #0A0A0A;
-
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 15vh;
-    margin: auto;
-}
-
-section:nth-child(6)>div>h3{
-    width: 20vw;
-    font-family: Inter, SansSerif;
-    font-size: 1.2vw;
-    font-weight: 600;
-    text-align: center;
-    color: #808080;
-
-    position: absolute;
-    top: 21vh;
+    top: 5vw;
     left: 0;
     right: 0;
     margin: auto;
 }
 
 
-#box1{
-    top: 25vh;
-    left: 12vw;
-}
-
-#box1>img{
-    width: 20%;
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 4vh;
-    margin: auto;
-}
-
-#box2{
-    top: 25vh;
-    right: 0;
-    left: 0;
-}
-
-#box2>img{
-    width: 18%;
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 4.8vh;
-    margin: auto;
-}
-
-#box3{
-    top: 25vh;
-    right: 12vw;
-}
-
-#box3>img{
-    width: 20%;
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 4vh;
-    margin: auto;
-}
-
-
-
-
-
-#box4{
-    top: 61.5vh;
-    left: 12vw;
-}
-
-#box4>img{
-    width: 18%;
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 4vh;
-    margin: auto;
-}
-
-#box5{
-    top: 61.5vh;
-    right: 0;
-    left: 0;
-}
-
-#box5>img{
-    width: 16%;
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 4vh;
-    margin: auto;
-}
-
-#box6{
-    top: 61.5vh;
-    right: 12vw;
-}
-
-#box6>img{
-    width: 20%;
-    position: absolute;
-    right: 0;
-    left: 0;
-    top: 4vh;
-    margin: auto;
-}
-
-
-/*--------------------------------------Project section-------------------------------------------------*/
-
-
-section:nth-child(7){
-    position: relative;
-    height: 120vh;
-    width: 70.75vw;
-    padding-left: 14vw;
-    padding-right: 14vw;
-    overflow: hidden;
-}
-
-section:nth-child(7)>h3{
-    width: 29vw;
-    font-family: Inter, "Arial Black";
-    font-size: 2vw;
-    font-weight: 600;
-    color: #808080;
-    position: absolute;
-    top: 0vh;
-    left: 35vw;
-    margin: auto;
-}
-
-section:nth-child(7)>h1{
-    width: 34vw;
-    font-family: 'Catamaran';
-    font-size: 3vw;
-    font-weight: 700;
-    color: #0A0A0A;
-    position: absolute;
-    top: 3vh;
-    left: 37vw;
-    margin: auto;
-}
-
-section:nth-child(7)>h2{
-    width: 56vw;
-    font-family: Inter, cursive;
-    font-size: 1.5vw;
-    font-weight: 700;
-    color: #0A0A0A;
-    position: absolute;
-    top: 10vh;
-    left: 24vw;
-    margin: auto;
-}
-
-#section7Project1{
-    width: 40%;
-    position: absolute;
-    top: 34vh;
-    left: -17vw;
-    margin: auto;
-    opacity: 90%;
-}
-
-#section7Project2{
-    width: 35%;
-    position: absolute;
-    top: 37vh;
-    right: -12vw;
-    margin: auto;
-    opacity: 80%;
-}
-
-#section7Project3{
-    width: 50%;
-    position: absolute;
-    top: 30vh;
-    right: 0;
-    left: 0;
-    margin: auto;
-}
-
-#section7LeftArrow{
-    width: 3%;
-
-    position: absolute;
-    top: 57vh;
-    left: 26vw;
-    margin: auto;
-}
-
-#section7RightArrow{
-    width: 3%;
-    position: absolute;
-    top: 57vh;
-    right: 26vw;
-    margin: auto;
-}
-
-section:nth-child(7)>h4{
-    width: 11vw;
-    font-family: Inter, SansSerif;
-    font-size: 1vw;
-    font-weight: 600;
-    color: #0A0A0A;
-    position: absolute;
-    bottom: 15vh;
-    right: 0;
-    left: 0;
-    margin: auto;
-    background-color: #05BFDB;
-    border-radius: 8px;
-    padding: 1vh;
-    box-shadow: #05BFDB 0px 4px 12px;
-}
-
-section:nth-child(7)>h4:hover{
-    background-color: #088395;
-    box-shadow: #088395 0px 4px 12px;
-}
-
-section:nth-child(7)>h4>a {
-    color: black;
-    text-decoration: none;
-}
-
-/*--------------------------------------Blog section-------------------------------------------------*/
-
-section:nth-child(8){
-    position: relative;
-    height: 180vh;
-    width: 70vw;
-    padding-left: 14vw;
-    padding-right: 14vw;
-}
-
-section:nth-child(8)>h5{
-    width: 2.5vw;
-    font-family: Inter, "Arial Black";
-    font-size: 2vw;
-    font-weight: 600;
-    color: #808080;
-    position: absolute;
-    top: 8vh;
-    left: 0;
-    right: 0;
-    margin: auto;
-}
-
-section:nth-child(8)>h1{
-    width: 22vw;
-    font-family: 'Catamaran';
-    font-size: 3vw;
-    font-weight: 700;
-    color: #0A0A0A;
-    position: absolute;
-    top: 13vh;
-    right: 0;
-    left: 7vh;
-    margin: auto;
-}
-
-#section8Img1{
-    width: 23%;
-
-    position: absolute;
-    top: 30vh;
-    left: 14vw;
-    margin: auto;
-}
-
-#section8Img2{
-    width: 23%;
-    position: absolute;
-    top: 103vh;
-    left: 13.8vw;
-    margin: auto;
-}
-
-#section8Img3{
-    width: 23%;
-    position: absolute;
-    top: 29.8vh;
-    left: 39vw;
-    margin: auto;
-}
-
-#section8Img4{
-    width: 23%;
-    /* height: 25%; */
-    position: absolute;
-    top: 103vh;
-    left: 39vw;
-    margin: auto;
-}
-
-#section8Img5{
-    width: 20.5%;
-    position: absolute;
-    top: 29.8vh;
-    right: 14vw;
-    margin: auto;
-}
-
-#section8Img6{
-    width: 23%;
-    position: absolute;
-    top: 145vh;
-    left: 39vw;
-    margin: auto;
-}
-
-#section8Img7{
-    width: 27%;
-
-    position: absolute;
-    top: 77vh;
-    right: 14vw;
-    margin: auto;
-}
 
 
 /*--------------------------------------contact section-------------------------------------------------*/
