--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -423,6 +423,26 @@ section:nth-child(3)>div>h3{
     right: 0;
     margin: auto;
 }
+
+#box1{
+    top: 35vh;
+    left: 12vw;
+}
+
+#box1>img{
+    width: 20%;
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 4vh;
+    margin: auto;
+}
+
+
+
+
+
+
 /*--------------------------------------contact section-------------------------------------------------*/
 
 .contact-section{
