--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -467,6 +467,22 @@ section:nth-child(3)>div>h3{
     margin: auto;
 }
 
+#box4{
+    top: 74vh;
+    left: 12vw;
+}
+
+#box4>img{
+    width: 20%;
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 4vh;
+    margin: auto;
+}
+
+
+
 
 /*--------------------------------------contact section-------------------------------------------------*/
 
