--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -496,6 +496,20 @@ section:nth-child(3)>div>h3{
     margin: auto;
 }
 
+#box6{
+    top: 74vh;
+    right: 12vw;
+}
+
+#box6>img{
+    width: 20%;
+    position: absolute;
+    right: 0;
+    left: 0;
+    top: 4vh;
+    margin: auto;
+}
+
 
 /*--------------------------------------contact section-------------------------------------------------*/
 
