--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -627,7 +627,23 @@ section:nth-child(4)>div:nth-child(3)>div:nth-child(3)>h1{
     left: 7vw;
 }
 
+section:nth-child(4)>div:nth-child(3)>div:nth-child(4)>h5{
+    position: absolute;
+    width: 16vh;
+    font-family: system-ui;
+    font-size: 3vh;
+    left: 7vw;
+    bottom: 52.9vh;
+}
 
+section:nth-child(4)>div:nth-child(3)>div:nth-child(4)>img{
+    position: absolute;
+    left: 15vw;
+    bottom: 7vh;
+    height: 12vh;
+    width: 12vh;
+    bottom: 53.5vh;
+}
 
 /*--------------------------------------contact section-------------------------------------------------*/
 
