--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -679,6 +679,26 @@ section:nth-child(4)>div:nth-child(3)>div:nth-child(5)>h5{
     bottom: 87.9vh;
 }
 
+section:nth-child(4)>div:nth-child(3)>div:nth-child(5)>img{
+    position: absolute;
+    left: 44vw;
+    bottom: 7vh;
+    height: 12vh;
+    width: 12vh;
+    bottom: 88vh;
+
+}
+
+section:nth-child(4)>div:nth-child(3)>div:nth-child(5)>h1{
+    width: 61vh;
+    font-size: 3vh;
+    font-family: system-ui;
+    position: absolute;
+    bottom: 93vh;
+    left: 7vw;
+}
+
+
 
 
 /*--------------------------------------contact section-------------------------------------------------*/
