--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -698,6 +698,15 @@ section:nth-child(4)>div:nth-child(3)>div:nth-child(5)>h1{
     left: 7vw;
 }
 
+section:nth-child(4)>div:nth-child(3)>div:nth-child(5)>h2{
+    width: 50vh;
+    font-size: 2vh;
+    font-family: system-ui,cursive;
+    position: absolute;
+    bottom: 89vh;
+    left: 8vw;
+}
+
 
 
 
