--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -800,6 +800,21 @@ section:nth-child(5)>img:hover{
     left: 45vw;
 }
 
+#wordpressLogo{
+    right: 45vw;
+    left: 0vw;
+}
+
+#arduinoLogo{
+    right: 0vw;
+    left: 60vw;
+}
+
+#hibernateLogo{
+    right: 60vw;
+    left: 0vw;
+}
+
 /*--------------------------------------contact section-------------------------------------------------*/
 
 .contact-section{
